Intent: Strengthen property-test scaffolding for TNFR graphs Operators involved: [Resonance, Self-organization] Affected invariants: [#1, #8] Key changes: - Added Hypothesis-based extras to the test dependency set. - Introduced reusable Hypothesis strategies for TNFR graph preparation. - Documented CI-aligned property test settings and hook factories. Expected risks/dissonances: Low; property scaffolding may require new hooks if dynamics expand. Metrics: Property scaffolds keep C(t) stable while preserving νf and phase coverage in generated graphs.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,8 @@ test = [
   "pytest-benchmark>=4",
   "pydocstyle>=6",
   "coverage>=7",
+  "hypothesis>=6",
+  "hypothesis-networkx>=0.3",
   "flake8>=5",
   "flake8-pyproject>=1.2",
   "vulture>=2",
