Intent: Align docs dependencies with required tooling Operators involved: [Emission] Affected invariants: [] Key changes: - appended documentation build requirements to docs/requirements.txt Expected risks/dissonances: Minimal risk of dependency version overlap. Metrics: (C(t), Si, νf, phase) not impacted. Equivalence map: None

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,2 +1,8 @@
 mkdocs>=1.5,<2.0
 mkdocs-material>=9.5,<10.0
+mkdocs>=1.5
+mkdocs-material>=9.5
+mkdocs-jupyter==0.24.8
+mkdocs-linkcheck==1.0.6
+nbconvert>=7.16
+pytest>=8.2
