Intent: Align theory notebook slugs with phase-3 navigation Operators involved: [Coherence, Recursivity] Affected invariants: [#7, #9] Key changes: - Renamed theory notebooks to phase-3 slugs for canonical navigation - Reorganized MkDocs navigation to match primer and operator sections - Updated scaffolding script to emit renamed notebooks Expected risks/dissonances: Minimal risk of broken doc links; mitigated via repository-wide search for legacy slugs Metrics: C(t) stable; νf unaffected; documentation-only change Equivalence map: 00_overview→00_tnfr_overview, 01_hilbert_space→01_hilbert_space_h_nfr, 01-structural-frequency→01_structural_frequency_primer, 02-phase-synchrony→02_phase_synchrony_lattices, 02_coherence_operator_C_hat→02_coherence_operator_hatC, 03-delta-nfr-gradients→03_delta_nfr_gradient_fields, 03_frequency_operator_J_hat→03_frequency_operator_hatJ, 04-coherence-metrics→04_coherence_metrics_walkthrough, 04_validator_and_metrics→04_validator_and_metrics_suite, 05-sense-index→05_sense_index_calibration, 05_unitary_dynamics_and_delta_nfr→05_unitary_dynamics_delta_nfr, 06-recursivity→06_recursivity_cascades

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,12 +15,20 @@ nav:
       - Structural operators: api/operators.md
       - Telemetry & utilities: api/telemetry.md
   - Mathematical Foundations:
-      - Overview: theory/00_overview.ipynb
-      - Hilbert space foundations: theory/01_hilbert_space.ipynb
-      - Coherence operator Ĉ: theory/02_coherence_operator_C_hat.ipynb
-      - Frequency operator Ĵ: theory/03_frequency_operator_J_hat.ipynb
-      - Validator and metrics: theory/04_validator_and_metrics.ipynb
-      - Unitary dynamics and ΔNFR: theory/05_unitary_dynamics_and_delta_nfr.ipynb
+      - Overview: theory/00_tnfr_overview.ipynb
+      - Primers:
+          - Structural frequency primer: theory/01_structural_frequency_primer.ipynb
+          - Phase synchrony lattices: theory/02_phase_synchrony_lattices.ipynb
+          - ΔNFR gradient fields: theory/03_delta_nfr_gradient_fields.ipynb
+          - Coherence metrics walkthrough: theory/04_coherence_metrics_walkthrough.ipynb
+          - Sense index calibration: theory/05_sense_index_calibration.ipynb
+          - Recursivity cascades: theory/06_recursivity_cascades.ipynb
+      - Operators & validators:
+          - Hilbert space ℋ_NFR: theory/01_hilbert_space_h_nfr.ipynb
+          - Coherence operator Ĉ: theory/02_coherence_operator_hatC.ipynb
+          - Frequency operator Ĵ: theory/03_frequency_operator_hatJ.ipynb
+          - Validator & metrics suite: theory/04_validator_and_metrics_suite.ipynb
+          - Unitary dynamics & ΔNFR: theory/05_unitary_dynamics_delta_nfr.ipynb
   - Examples: examples/README.md
   - Security:
       - Monitoring: security/monitoring.md
