Intent: Align notebook references with canonical docs Operators involved: [Coherence, Resonance] Affected invariants: [#7] Key changes: - Rename theory notebooks to canonical filenames and update nav titles - Refresh doc links and scaffolding script to point at canonical notebooks - Confirm documentation notebooks execute via scripts/test_docs.sh Expected risks/dissonances: Potential stale references in downstream docs mitigated by repo-wide search Metrics: C(t) expected stable; ΔNFR doc linkage coherence maintained Equivalence map: 00_tnfr_overview→00_overview, 04_validator_and_metrics_suite→04_nfr_validator_and_metrics, 05_unitary_dynamics_delta_nfr→05_unitary_dynamics_and_delta_nfr

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,7 @@ nav:
       - Structural operators: api/operators.md
       - Telemetry & utilities: api/telemetry.md
   - Mathematical Foundations:
-      - Overview: theory/00_tnfr_overview.ipynb
+      - Overview: theory/00_overview.ipynb
       - Primers:
           - Structural frequency primer: theory/01_structural_frequency_primer.ipynb
           - Phase synchrony lattices: theory/02_phase_synchrony_lattices.ipynb
@@ -27,8 +27,8 @@ nav:
           - Hilbert space ℋ_NFR: theory/01_hilbert_space_h_nfr.ipynb
           - Coherence operator Ĉ: theory/02_coherence_operator_hatC.ipynb
           - Frequency operator Ĵ: theory/03_frequency_operator_hatJ.ipynb
-          - Validator & metrics suite: theory/04_validator_and_metrics_suite.ipynb
-          - Unitary dynamics & ΔNFR: theory/05_unitary_dynamics_delta_nfr.ipynb
+          - NFR validator & metrics: theory/04_nfr_validator_and_metrics.ipynb
+          - Unitary dynamics & ΔNFR: theory/05_unitary_dynamics_and_delta_nfr.ipynb
   - Examples: examples/README.md
   - Security:
       - Monitoring: security/monitoring.md
