--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,7 +68,7 @@ Repository = "https://github.com/fermga/TNFR-Python-Engine"
 GPT = "https://chatgpt.com/g/g-67abc78885a88191b2d67f94fd60dc97-tnfr-resonant-fractal-nature-theory"
 
 [tool.setuptools.package-data]
-tnfr = ["py.typed"]
+tnfr = ["py.typed", "schemas/*.json"]
 
 [tool.setuptools_scm]
 tag_regex = '^v(?P<version>[0-9]+\.[0-9]+\.[0-9]+)$'
