Intent: Improve telemetry visualization coherence Operators involved: [Emission, Resonance] Affected invariants: [#5, #9] Key changes: - add TNFR Matplotlib plotting module for coherence, phase, and spectrum telemetry - attach explicit metadata to exported figures and expose viz package API - cover plotting smoke tests and include Matplotlib dependency for test extra Expected risks/dissonances: Matplotlib dependency footprint; mitigated by optional extra and deterministic smoke tests Metrics: Metadata traces C(t) and ν_f bounds for exported figures Equivalence map: None

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
 numpy = ["numpy>=1.24"]
 yaml = ["pyyaml>=6.0"]
 orjson = ["orjson>=3"]
+viz = ["matplotlib>=3.7"]
 test = [
   "pytest>=7",
   "pytest-benchmark>=4",
@@ -45,6 +46,7 @@ test = [
   "flake8>=5",
   "flake8-pyproject>=1.2",
   "vulture>=2",
+  "matplotlib>=3.7",
 ]
 typecheck = [
   "mypy>=1.8",
