--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-command = "python -m pip install -r docs/requirements.txt && python -m mkdocs build"
-publish = "site"
+command = "python -m pip install -r docs/requirements.txt && make docs"
+publish = "docs/_build/html"
