--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,17 @@ numpy = ["numpy>=1.24"]
 yaml = ["pyyaml>=6.0"]
 orjson = ["orjson>=3"]
 viz = ["matplotlib>=3.7"]
+docs = [
+  "sphinx>=7.2",
+  "sphinx-autodoc-typehints>=1.25",
+  "myst-parser>=2.0",
+  "nbsphinx>=0.9",
+  "sphinx-rtd-theme>=1.3",
+  "sphinxcontrib-mermaid>=0.9",
+  "ipykernel>=6",
+  "nbconvert>=7.16",
+  "pypandoc-binary>=1.14",
+]
 test = [
   "pytest>=7",
   "pytest-benchmark>=4",
