Intent: Increase backend flexibility while preserving canonical coherence evaluation. Operators involved: [Coupling, Resonance, Transition] Affected invariants: [#1, #7, #9] Key changes: - Added mathematics backend abstraction with NumPy/JAX/Torch adapters and configuration-aware selector. - Exposed backend utilities in tnfr.mathematics, extended feature flags and optional dependencies, and documented install options. - Added tests and docs describing backend usage and extras. Expected risks/dissonances: Backend selection relies on optional dependencies; fallback to NumPy mitigates dissonance and keeps ΔNFR semantics intact. Metrics: C(t) stable; Si neutral; νf unchanged; phase coherence unaffected by adapter selection. Equivalence map: New get_backend API complements existing get_numpy helper; no legacy APIs renamed.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ dependencies = [
 
 [project.optional-dependencies]
 numpy = ["numpy>=1.24"]
+jax = ["jax>=0.4"]
+torch = ["torch>=2.1"]
 yaml = ["pyyaml>=6.0"]
 orjson = ["orjson>=3"]
 viz = ["matplotlib>=3.7"]
