chore(ci): trigger copilot workflow with circular import fix
This workflow only runs when the workflow file itself changes.
Adding comment to trigger re-run with the circular import fix from commit 67795d75.

The fix moved ValidationOutcome and Validator to base.py to break the
circular dependency: validation.__init__ → runtime → validation.__init__

--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -51,6 +51,7 @@ jobs:
       - name: Verify TNFR installation
         run: |
           # Verify the TNFR package is properly installed from repo (not PyPI)
+          # Fixed: circular import in validation module resolved via base.py
           python -c "import tnfr; print(f'TNFR version: {tnfr.__version__}')"
           python -c "import tnfr, os; print(f'TNFR location: {os.path.dirname(tnfr.__file__)}')"
           # Verify core modules are accessible
