fix(ci): add required permissions and simplify copilot workflow
- Add actions:read and metadata:read permissions for Copilot agent
- Simplify verification steps to reduce execution time
- Remove verbose debug steps
- The w.connect error suggests permission/timeout issues

--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -16,11 +16,15 @@ jobs:
   copilot-setup-steps:
     runs-on: ubuntu-latest
 
-    # Set the permissions to the lowest permissions possible needed for your steps.
+    # Set the permissions needed for Copilot operations
     # Copilot will be given its own token for its operations.
     permissions:
       # Required for actions/checkout - Copilot needs to access the repository
       contents: read
+      # Required for Copilot to interact with Actions
+      actions: read
+      # Required for Copilot to read metadata
+      metadata: read
 
     # Configure the environment for TNFR development
     # Purpose: Enable exploration, study, investigation, and development of TNFR
@@ -46,31 +50,13 @@ jobs:
           python -m pip install --upgrade pip
           # Install TNFR directly from repository source code (NOT from PyPI)
           # Using editable mode (-e) to work with the latest development version
-          # This provides full environment for exploring and developing TNFR:
-          # - Core operators (13 canonical structural transformations)
-          # - Test infrastructure for validating invariants
-          # - Serialization for state preservation
-          # - NumPy for structural computations
           python -m pip install -e .[test,numpy,yaml,orjson]
-
-      - name: Debug - Verify base.py exists
-        run: |
-          echo "Checking for base.py..."
-          ls -la src/tnfr/validation/base.py
-          echo "Checking runtime.py import line..."
-          grep -n "from.*import.*ValidationOutcome" src/tnfr/validation/runtime.py
-          echo "Git commit SHA:"
-          git rev-parse HEAD
 
       - name: Verify TNFR installation
         run: |
           # Verify the TNFR package is properly installed from repo (not PyPI)
-          # Fixed: circular import in validation module resolved via base.py
-          python -c "import tnfr; print(f'TNFR version: {tnfr.__version__}')"
-          python -c "import tnfr, os; print(f'TNFR location: {os.path.dirname(tnfr.__file__)}')"
+          python -c "import tnfr; print(f'✓ TNFR version: {tnfr.__version__}')"
           # Verify core modules are accessible
-          python -c "from tnfr.operators import Emission, Coherence, Resonance; print('✓ Core operators available')"
-          python -c "from tnfr.metrics.coherence import compute_global_coherence; print('✓ Metrics available')"
-          # Display Python environment info
-          python --version
-          pip list | grep -E "(tnfr|pytest|numpy|networkx)"
+          python -c "from tnfr.operators import Emission, Coherence, Resonance; print('✓ Core operators')"
+          python -c "from tnfr.metrics.coherence import compute_global_coherence; print('✓ Metrics')"
+          echo "✓ TNFR environment ready for Copilot"
