--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -1,7 +1,6 @@
 name: "Copilot Setup Steps"
 
-# Automatically run the setup steps when they are changed to allow for easy validation,
-# and allow manual testing through the repository's "Actions" tab
+# Workflow for GitHub Copilot Workspace to prepare TNFR development environment
 on:
   workflow_dispatch:
   push:
@@ -12,51 +11,28 @@ on:
       - .github/workflows/copilot-setup-steps.yml
 
 jobs:
-  # The job MUST be called `copilot-setup-steps` or it will not be picked up by Copilot.
+  # The job MUST be called `copilot-setup-steps` for GitHub Copilot Workspace
   copilot-setup-steps:
     runs-on: ubuntu-latest
-
-    # Set the permissions needed for Copilot operations
-    # Copilot will be given its own token for its operations.
+    
     permissions:
-      # Required for actions/checkout - Copilot needs to access the repository
       contents: read
-      # Required for Copilot to interact with Actions
-      actions: read
-      # Required for Copilot to read metadata
-      metadata: read
 
-    # Configure the environment for TNFR development
-    # Purpose: Enable exploration, study, investigation, and development of TNFR
-    # (Resonant Fractal Nature Theory - modeling coherent patterns through resonance)
     steps:
-      - name: Checkout TNFR repository
-        uses: actions/checkout@v5
-
-      - name: Clean Python bytecode cache
-        run: |
-          find . -type d -name __pycache__ -exec rm -rf {} + 2>/dev/null || true
-          find . -type f -name "*.pyc" -delete 2>/dev/null || true
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v6
+        uses: actions/setup-python@v5
         with:
-          # Using Python 3.11 - the primary version for TNFR development and CI
           python-version: "3.11"
           cache: "pip"
 
-      - name: Install TNFR dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # Install TNFR directly from repository source code (NOT from PyPI)
-          # Using editable mode (-e) to work with the latest development version
-          python -m pip install -e .[test,numpy,yaml,orjson]
+          pip install -e .[test,numpy,yaml,orjson]
 
-      - name: Verify TNFR installation
+      - name: Verify installation
         run: |
-          # Verify the TNFR package is properly installed from repo (not PyPI)
-          python -c "import tnfr; print(f'✓ TNFR version: {tnfr.__version__}')"
-          # Verify core modules are accessible
-          python -c "from tnfr.operators import Emission, Coherence, Resonance; print('✓ Core operators')"
-          python -c "from tnfr.metrics.coherence import compute_global_coherence; print('✓ Metrics')"
-          echo "✓ TNFR environment ready for Copilot"
+          python -c "import tnfr; print(f'TNFR v{tnfr.__version__} ready')"
