--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,8 @@ dynamic = ["version"]
 description = "Modular structural-based dynamics on networks."
 readme = "README.md"
 requires-python = ">=3.10"
-license = { text = "MIT" }
+license = "MIT"
+license-files = ["LICENSE.md"]
 authors = [{ name = "fmg" }]
 keywords = [
   "TNFR", "complex systems", "fractals", "resonance", 
@@ -18,7 +19,6 @@ classifiers = [
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
-  "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
   "Intended Audience :: Science/Research",
   "Topic :: Scientific/Engineering",
@@ -175,6 +175,7 @@ tnfr = ["py.typed", "schemas/*.json"]
 [tool.setuptools.packages.find]
 # Ensure all tnfr subpackages (including newly added modules like 'physics')
 # are included in builds and editable installs.
+where = ["src"]
 include = ["tnfr", "tnfr.*"]
 
 [tool.setuptools_scm]
