Clean up cache and result files, optimize repository size
- Remove temporary result directories: results/, outputs/, dist-test/, test-env/
- Remove large benchmark result files (4MB+ saved)
- Update .gitignore to prevent tracking of:
  - Temporary result directories
  - Large telemetry files
  - Generated output directories
- Repository size optimized for cleaner distribution

This cleanup removes ~40MB of cache/result files that don't need to be in version control.

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,15 @@ semgrep.sarif
 
 # Validation outputs (generated)
 validation_outputs/
+
+# Generated results and outputs (not needed in repo)
+results/
+outputs/
+dist-test/
+test-env/
+
+# Large benchmark result files
+benchmarks/results/*_telemetry.jsonl
+benchmarks/results/phase_gradient_full_study.jsonl
+benchmarks/results/u6_aggressive_results.jsonl
+benchmarks/results/*_5000_*.jsonl
