Update GitHub Pages documentation to sync with current READMEs
Major updates to GitHub Pages documentation system:

**Documentation Sync System**:
- Create sync-readme-docs.py script to automatically copy main README and module READMEs to docs/
- Main README → docs/index.md for MkDocs homepage
- Module READMEs → docs/modules/ for organized module documentation
- Root documentation files copied to docs/ for navigation

**MkDocs Configuration Updates**:
- Updated mkdocs.yml to use synced documentation files
- Fixed YAML syntax and indentation issues
- Added comprehensive module documentation section
- Organized navigation with Core Documentation and Module Documentation sections
- Added all major TNFR documentation files to navigation

**GitHub Actions Integration**:
- Updated deploy-docs.yml and docs.yml workflows to run sync script before build
- Configured triggers for README.md and module README changes
- Added pattern matching for *.md files to ensure comprehensive updates

**Result**: GitHub Pages now automatically reflects current state of:
- Main repository README as homepage
- All module READMEs in organized navigation
- Core TNFR documentation (AGENTS.md, UNIFIED_GRAMMAR_RULES.md, etc.)
- Automatic updates when any README is modified

This creates a single source of truth where GitHub Pages documentation stays synchronized with repository documentation automatically.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -8,6 +8,9 @@ on:
     paths:
       - 'mkdocs.yml'
       - 'docs/**'
+      - 'README.md'
+      - 'src/**/README.md'
+      - '*.md'
 
 jobs:
   build-deploy:
@@ -27,6 +30,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r docs/requirements.txt
+
+      - name: Sync README files
+        run: |
+          python scripts/sync-readme-docs.py
 
       - name: Build docs
         run: |
