--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -8,6 +8,9 @@ on:
       - 'docs/**'
       - 'mkdocs.yml'
       - '.github/workflows/deploy-docs.yml'
+      - 'README.md'
+      - 'src/**/README.md'
+      - '*.md'
   workflow_dispatch:
 
 permissions:
@@ -34,6 +37,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r docs/requirements.txt
+      
+      - name: Sync README files
+        run: |
+          python scripts/sync-readme-docs.py
       
       - name: Build MkDocs site
         run: |
