feat: Complete academic metadata update with DOI and ORCID
- Add ORCID ID (0009-0007-6116-0613) to all metadata files
- Update pyproject.toml with academic description and keywords
- Add Citation and Zenodo URLs to project metadata
- Update CITATION.cff with version 9.0.2 and complete info
- Update .zenodo.json with publication date and version
- Add prominent ORCID display in README citation section

Repository now has complete academic metadata for proper citation and discoverability.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,16 @@
 [project]
 name = "tnfr"
 dynamic = ["version"]
-description = "Modular structural-based dynamics on networks."
+description = "Resonant Fractal Nature Theory (TNFR) - Computational engine for modeling coherent patterns through resonance dynamics"
 readme = "README.md"
 requires-python = ">=3.10"
 license = "MIT"
 license-files = ["LICENSE.md"]
-authors = [{ name = "fmg" }]
+authors = [{ name = "FMG", orcid = "0009-0007-6116-0613" }]
 keywords = [
-  "TNFR", "complex systems", "fractals", "resonance", 
-  "networks", "structural dynamics", 
-  "structural analysis"
+  "TNFR", "Resonant Fractal Nature Theory", "complex systems", "fractals", "resonance", 
+  "networks", "structural dynamics", "structural operators", "coherence theory",
+  "physics simulation", "emergence", "synchronization", "zenodo", "doi"
 ]
 classifiers = [
   "Programming Language :: Python :: 3",
@@ -165,8 +165,13 @@ tnfr-validate = "tnfr.cli.validate:main"
 tnfr-is-prime = "tnfr.tools.tnfr_is_prime_cli:main"
 
 [project.urls]
-Homepage = "https://pypi.org/project/tnfr/"
+Homepage = "https://github.com/fermga/TNFR-Python-Engine"
 Repository = "https://github.com/fermga/TNFR-Python-Engine"
+PyPI = "https://pypi.org/project/tnfr/"
+Citation = "https://doi.org/10.5281/zenodo.17602861"
+Zenodo = "https://zenodo.org/records/17602861"
+Issues = "https://github.com/fermga/TNFR-Python-Engine/issues"
+Documentation = "https://fermga.github.io/TNFR-Python-Engine/"
 GPT = "https://chatgpt.com/g/g-67abc78885a88191b2d67f94fd60dc97-tnfr-resonant-fractal-nature-theory"
 
 [tool.setuptools.package-data]
