feat: Disable GitHub Pages documentation, enable local-only builds
- Disable docs.yml and deploy-docs.yml workflows
- Update README with local documentation instructions
- Remove Documentation URL from pyproject.toml
- Add .nojekyll file to prevent accidental GitHub Pages processing
- Update documentation badge to reflect local build

Documentation is now built locally using 'mkdocs serve' only.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,16 +1,19 @@
-name: Build and Deploy Documentation
+name: Build and Deploy Documentation (DISABLED)
 
-on:
-  push:
-    branches: [ main ]
-  workflow_dispatch: {}
-  pull_request:
-    paths:
-      - 'mkdocs.yml'
-      - 'docs/**'
-      - 'README.md'
-      - 'src/**/README.md'
-      - '*.md'
+# DISABLED: Documentation now built locally only
+# To re-enable, remove this comment and uncomment the 'on' section below
+
+# on:
+#   push:
+#     branches: [ main ]
+#   workflow_dispatch: {}
+#   pull_request:
+#     paths:
+#       - 'mkdocs.yml'
+#       - 'docs/**'
+#       - 'README.md'
+#       - 'src/**/README.md'
+#       - '*.md'
 
 jobs:
   build-deploy:
