--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,17 +1,20 @@
-name: Deploy Documentation to GitHub Pages
+name: Deploy Documentation to GitHub Pages (DISABLED)
 
-on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'docs/**'
-      - 'mkdocs.yml'
-      - '.github/workflows/deploy-docs.yml'
-      - 'README.md'
-      - 'src/**/README.md'
-      - '*.md'
-  workflow_dispatch:
+# DISABLED: Documentation now built locally only
+# To re-enable, remove this comment and uncomment the 'on' section below
+
+# on:
+#   push:
+#     branches:
+#       - main
+#     paths:
+#       - 'docs/**'
+#       - 'mkdocs.yml'
+#       - '.github/workflows/deploy-docs.yml'
+#       - 'README.md'
+#       - 'src/**/README.md'
+#       - '*.md'
+# workflow_dispatch:
 
 permissions:
   contents: write
