--- a/pyproject.toml
+++ b/pyproject.toml
@@ -191,6 +191,7 @@ include = ["tnfr", "tnfr.*"]
 tag_regex = '^v(?P<version>[0-9]+\.[0-9]+\.[0-9]+)$'
 local_scheme = "no-local-version"
 write_to = "src/tnfr/_generated_version.py"
+fallback_version = "9.0.3"
 
 [tool.semantic_release]
 version_source = "tag"
