--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,39 @@
+[tool.poetry]
+name = "tnfr"
+version = "1.0.0"
+description = "Resonant Fractal Nature Theory (TNFR) - Computational engine for modeling coherent patterns through resonance dynamics"
+readme = "README.md"
+authors = ["F. F. Martinez Gamo"]
+license = "MIT"
+packages = [{include = "tnfr", from = "src"}]
+
 [project]
 name = "tnfr"
-version = "0.0.2"
+version = "1.0.0"
 description = "Resonant Fractal Nature Theory (TNFR) - Computational engine for modeling coherent patterns through resonance dynamics"
 readme = "README.md"
 requires-python = ">=3.10"
 license = "MIT"
 license-files = ["LICENSE.md"]
 authors = [{ name = "F. F. Martinez Gamo" }]
+
+[tool.poetry.dependencies]
+python = "^3.10"
+# Minimal core - truly minimal for primality testing
+networkx = {version = "^2.6", optional = true}
+cachetools = {version = "^5.0", optional = true}
+numpy = {version = "^1.24", optional = true}
+scipy = {version = "^1.9", optional = true}
+sympy = {version = "^1.10", optional = true}
+
+[tool.poetry.extras]
+full = ["numpy", "scipy", "networkx", "cachetools", "sympy"]
+math = ["sympy"]
+tnfr = ["networkx", "cachetools"]
+dev = ["pytest", "black", "flake8", "mypy"]
+
+[tool.poetry.scripts]
+tnfr-primality = "tnfr_primality.cli:main"
 
 [tool.tnfr.metadata]
 # ORCID retained outside PEP 621 authors block to satisfy strict validators
@@ -32,8 +59,6 @@ classifiers = [
 dependencies = [
   "networkx>=2.6,<4.0",
   "cachetools>=5.0,<7.0",
-  "numpy>=1.24,<3.0",
-  "scipy>=1.9,<2.0",
 ]
 
 [project.optional-dependencies]
@@ -297,5 +322,5 @@ ignore_missing_imports = true
 
 
 [build-system]
-requires = ["setuptools>=78.1.1", "wheel", "setuptools-scm>=8"]
+requires = ["setuptools>=78.1.1", "wheel"]
 build-backend = "setuptools.build_meta"
